add support for CNI taint controller

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -5220,6 +5220,11 @@ spec:
                           tag:
                             type: string
                         type: object
+                      taint:
+                        properties:
+                          enabled:
+                            type: boolean
+                        type: object
                     type: object
                   injectedAnnotations:
                     additionalProperties:
