--- a/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -1562,6 +1562,11 @@ spec:
                           tag:
                             type: string
                         type: object
+                      taint:
+                        properties:
+                          enabled:
+                            type: boolean
+                        type: object
                     type: object
                   injectedAnnotations:
                     additionalProperties:
