--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -1560,6 +1560,11 @@ spec:
                             tag:
                               type: string
                           type: object
+                        taint:
+                          properties:
+                            enabled:
+                              type: boolean
+                          type: object
                       type: object
                     injectedAnnotations:
                       additionalProperties:
