--- a/config/base/rbac/role.yaml
+++ b/config/base/rbac/role.yaml
@@ -135,6 +135,12 @@ rules:
   verbs:
   - create
 - apiGroups:
+  - authorization.k8s.io
+  resources:
+  - subjectaccessreviews
+  verbs:
+  - create
+- apiGroups:
   - autoscaling
   resources:
   - horizontalpodautoscalers
