--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -2934,6 +2934,8 @@ spec:
                     type: boolean
                   enabled:
                     type: boolean
+                  exposeWebhookPort:
+                    type: boolean
                   multiClusterSupport:
                     type: boolean
                   multiControlPlaneSupport:
