--- a/config/base/webhook/webhook.yaml
+++ b/config/base/webhook/webhook.yaml
@@ -22,6 +22,6 @@ webhooks:
     resources:
     - istios
     scope: '*'
-  sideEffects: Unknown
+  sideEffects: None
   timeoutSeconds: 30
   admissionReviewVersions: ["v1beta1", "v1"]
