--- a/deploy/charts/istio-operator/templates/operator-webhook.yaml
+++ b/deploy/charts/istio-operator/templates/operator-webhook.yaml
@@ -37,7 +37,7 @@ webhooks:
     resources:
     - istios
     scope: '*'
-  sideEffects: Unknown
+  sideEffects: None
   timeoutSeconds: 30
   admissionReviewVersions: ["v1beta1", "v1"]
 {{- end -}}
