add pilot spiffe config to api

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -4279,6 +4279,14 @@ spec:
                     type: object
                   sidecar:
                     type: boolean
+                  spiffe:
+                    properties:
+                      operatorEndpoints:
+                        properties:
+                          enabled:
+                            type: boolean
+                        type: object
+                    type: object
                   tolerations:
                     items:
                       properties:
