--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -4277,6 +4277,14 @@ spec:
                       type: object
                     sidecar:
                       type: boolean
+                    spiffe:
+                      properties:
+                        operatorEndpoints:
+                          properties:
+                            enabled:
+                              type: boolean
+                          type: object
+                      type: object
                     tolerations:
                       items:
                         properties:
