--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -3471,7 +3471,14 @@ spec:
                   type: boolean
                 mtls:
                   type: boolean
+                multiClusterDomains:
+                  items:
+                    pattern: ^[a-z0-9.]+$
+                    type: string
+                  type: array
                 multiMesh:
+                  type: boolean
+                multiMeshEnvoyFilter:
                   type: boolean
                 networkName:
                   type: string
