--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -3477,7 +3477,7 @@ spec:
                   properties:
                     domains:
                       items:
-                        pattern: ^[a-z0-9.]+$
+                        pattern: ^[-a-z0-9.]+$
                         type: string
                       type: array
                     enabled:
