--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample-v18x
 spec:
-  version: "1.8.2"
+  version: "1.9.0-beta.1"
   global: false
   meshPolicy:
     mtlsMode: PERMISSIVE
@@ -28,7 +28,7 @@ spec:
     enableStatus: true
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.8.2"
+    image: "docker.io/istio/pilot:1.9.0-beta.1"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
@@ -101,18 +101,18 @@ spec:
       enabled: false
   policy:
     enabled: false
-    image: "docker.io/istio/mixer:1.8.2"
+    image: "docker.io/istio/mixer:1.9.0-beta.1"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   telemetry:
     enabled: false
-    image: "docker.io/istio/mixer:1.8.2"
+    image: "docker.io/istio/mixer:1.9.0-beta.1"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   proxy:
-    image: "docker.io/istio/proxyv2:1.8.2"
+    image: "docker.io/istio/proxyv2:1.9.0-beta.1"
     accessLogFile: "/dev/stdout"
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
@@ -126,7 +126,7 @@ spec:
         cpu: 2000m
         memory: 1024Mi
   proxyInit:
-    image: "docker.io/istio/proxyv2:1.8.2"
+    image: "docker.io/istio/proxyv2:1.9.0-beta.1"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
