--- a/config/samples/istio_v1beta1_istio_multimesh.yaml
+++ b/config/samples/istio_v1beta1_istio_multimesh.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: multimesh-v18x
 spec:
-  version: "1.8.2"
+  version: "1.9.0-beta.1"
   global: false
   autoInjectionNamespaces:
   - "default"
@@ -18,5 +18,5 @@ spec:
   citadel:
     caSecretName: "cacerts"
   proxy:
-    image: "docker.io/istio/proxyv2:1.8.2"
+    image: "docker.io/istio/proxyv2:1.9.0-beta.1"
   jwtPolicy: "first-party-jwt"
