--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: remoteistios.istio.banzaicloud.io
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.8.2
+    resource.alpha.banzaicloud.io/revision: 1.9.0-beta.1
 spec:
   group: istio.banzaicloud.io
   names:
