--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -2546,6 +2546,13 @@ spec:
                     - Never
                     - IfNotPresent
                   type: string
+                imagePullSecrets:
+                  items:
+                    properties:
+                      name:
+                        type: string
+                    type: object
+                  type: array
                 includeIPRanges:
                   type: string
                 istioCoreDNS:
