--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -2550,6 +2550,13 @@ spec:
                 - Never
                 - IfNotPresent
                 type: string
+              imagePullSecrets:
+                items:
+                  properties:
+                    name:
+                      type: string
+                  type: object
+                type: array
               includeIPRanges:
                 type: string
               istioCoreDNS:
