--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample-v19x
 spec:
-  version: "1.9.0-beta.1"
+  version: "1.9.0-rc.0"
   global: false
   meshPolicy:
     mtlsMode: PERMISSIVE
@@ -28,5 +28,5 @@ spec:
         brokenPodLabelKey: "cni.istio.io/uninitialized"
         brokenPodLabelValue: "true"
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.0-beta.1"
+    image: "docker.io/istio/proxyv2:1.9.0-rc.0"
   jwtPolicy: "first-party-jwt"
