--- a/config/samples/istio_v1beta1_spiffe_endpoint.yaml
+++ b/config/samples/istio_v1beta1_spiffe_endpoint.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample-v19x
 spec:
-  version: "1.9.0-beta.1"
+  version: "1.9.0-rc.0"
   pilot:
     spiffe:
       operatorEndpoints:
