--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: istios.istio.banzaicloud.io
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.9.0-beta.1
+    resource.alpha.banzaicloud.io/revision: 1.9.0-rc.0
 spec:
   group: istio.banzaicloud.io
   names:
