--- a/config/base/rbac/role.yaml
+++ b/config/base/rbac/role.yaml
@@ -32,6 +32,8 @@ rules:
   verbs:
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
   - ""
@@ -160,6 +162,15 @@ rules:
   - signers
   verbs:
   - approve
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - create
+  - get
+  - list
+  - update
 - apiGroups:
   - discovery.k8s.io
   resources:
