Update sample deployments for newer k8s versions

--- a/docs/federation/gateway/bookinfo/deployments/productpage-v1.yaml
+++ b/docs/federation/gateway/bookinfo/deployments/productpage-v1.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: productpage-v1
@@ -7,6 +7,10 @@ metadata:
     version: v1
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: productpage
+      version: v1
   template:
     metadata:
       labels:
