--- a/docs/federation/gateway/bookinfo/deployments/reviews-v2.yaml
+++ b/docs/federation/gateway/bookinfo/deployments/reviews-v2.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: reviews-v2
@@ -7,6 +7,10 @@ metadata:
     version: v2
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: reviews
+      version: v2
   template:
     metadata:
       labels:
