--- a/docs/federation/gateway/samples/istio-multicluster-cr.yaml
+++ b/docs/federation/gateway/samples/istio-multicluster-cr.yaml
@@ -1,22 +1,21 @@
 apiVersion: istio.banzaicloud.io/v1beta1
 kind: Istio
 metadata:
-  name: gateway-multicluster
+  name: istio-gw-multi
 spec:
   version: "1.9.0-rc.0"
-  autoInjectionNamespaces:
-  - "default"
+  global: false
   meshPolicy:
     mtlsMode: STRICT
   meshExpansion: true
   imagePullPolicy: Always
   pilot:
     maxReplicas: 1
+  istiod:
+    multiClusterSupport: true
   gateways:
     ingress:
       maxReplicas: 1
     egress:
       maxReplicas: 1
       enabled: false
-  mixer:
-    maxReplicas: 1
