--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample-v19x
 spec:
-  version: "1.9.0-rc.0"
+  version: "1.9.0"
   global: false
   meshPolicy:
     mtlsMode: PERMISSIVE
@@ -26,7 +26,7 @@ spec:
     enableStatus: true
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.9.0-rc.0"
+    image: "docker.io/istio/pilot:1.9.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
@@ -99,18 +99,18 @@ spec:
       enabled: false
   policy:
     enabled: false
-    image: "docker.io/istio/mixer:1.9.0-rc.0"
+    image: "docker.io/istio/mixer:1.9.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   telemetry:
     enabled: false
-    image: "docker.io/istio/mixer:1.9.0-rc.0"
+    image: "docker.io/istio/mixer:1.9.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.0-rc.0"
+    image: "docker.io/istio/proxyv2:1.9.0"
     accessLogFile: "/dev/stdout"
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
@@ -124,7 +124,7 @@ spec:
         cpu: 2000m
         memory: 1024Mi
   proxyInit:
-    image: "docker.io/istio/proxyv2:1.9.0-rc.0"
+    image: "docker.io/istio/proxyv2:1.9.0"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
