--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -7,7 +7,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample-v19x
 spec:
-  version: "1.9.0-rc.0"
+  version: "1.9.0"
   global: false
   meshPolicy:
     mtlsMode: PERMISSIVE
@@ -29,5 +29,5 @@ spec:
   tracing:
     enabled: false
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.0-rc.0"
+    image: "docker.io/istio/proxyv2:1.9.0"
   jwtPolicy: "first-party-jwt"
