--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_meshgateways.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_meshgateways.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: meshgateways.istio.banzaicloud.io
   labels:
-    resource.alpha.banzaicloud.io/revision: 1.9.0-rc.0
+    resource.alpha.banzaicloud.io/revision: 1.9.0
 spec:
   group: istio.banzaicloud.io
   names:
