--- a/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
+++ b/pkg/manifests/istio-crds/assets/crd-all.gen.yaml
@@ -3057,6 +3057,7 @@ spec:
               - CUSTOM
               type: string
             provider:
+              description: Specifies detailed configuration of the CUSTOM action.
               properties:
                 name:
                   description: Specifies the name of the extension provider.
