Fix single mesh multi cluster gateway docs

--- a/docs/federation/gateway/bookinfo/istio/bookinfo-gateway.yaml
+++ b/docs/federation/gateway/bookinfo/istio/bookinfo-gateway.yaml
@@ -4,7 +4,7 @@ metadata:
   name: bookinfo-gateway
 spec:
   selector:
-    istio: ingressgateway
+    istio: meshexpansiongateway
   servers:
   - port:
       number: 80
