Fix and enhance multi mesh docs

--- a/docs/federation/multimesh/echo-gw.yaml
+++ b/docs/federation/multimesh/echo-gw.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   selector:
-    istio: ingressgateway
+    istio: meshexpansiongateway
   servers:
   - port:
       number: 80
