Make ExternalIstiod configurable

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -2965,6 +2965,11 @@ spec:
                     type: boolean
                   exposeWebhookPort:
                     type: boolean
+                  externalIstiod:
+                    properties:
+                      enabled:
+                        type: boolean
+                    type: object
                   multiClusterSupport:
                     type: boolean
                   multiControlPlaneSupport:
