--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -24,6 +24,8 @@ spec:
     enabled: true
     enableAnalysis: true
     enableStatus: true
+    externalIstiod:
+      enabled: false
   pilot:
     enabled: true
     image: "docker.io/istio/pilot:1.9.0"
