--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -2963,6 +2963,11 @@ spec:
                       type: boolean
                     exposeWebhookPort:
                       type: boolean
+                    externalIstiod:
+                      properties:
+                        enabled:
+                          type: boolean
+                      type: object
                     multiClusterSupport:
                       type: boolean
                     multiControlPlaneSupport:
