--- a/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -557,6 +557,8 @@ spec:
                   namespace:
                     type: string
                 type: object
+              networkName:
+                type: string
               proxy:
                 properties:
                   accessLogEncoding:
