--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -555,6 +555,8 @@ spec:
                     namespace:
                       type: string
                   type: object
+                networkName:
+                  type: string
                 proxy:
                   properties:
                     accessLogEncoding:
