--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -29,6 +29,10 @@ spec:
       jsonPath: .status.GatewayAddress
       name: Ingress IPs
       type: string
+    - description: Network name
+      jsonPath: .spec.networkName
+      name: Network name
+      type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
