--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -27,6 +27,10 @@ spec:
           jsonPath: .status.GatewayAddress
           name: Ingress IPs
           type: string
+        - description: Network name
+          jsonPath: .spec.networkName
+          name: Network name
+          type: string
         - jsonPath: .metadata.creationTimestamp
           name: Age
           type: date
