Adds in customTags to the tracing config so you can specifiy custom tags to be included in all spans

--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -6433,6 +6433,10 @@ spec:
                   type: object
                 tracing:
                   properties:
+                    customTags:
+                      additionalProperties:
+                        x-kubernetes-preserve-unknown-fields: true
+                      type: object
                     datadog:
                       properties:
                         address:
