--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -6435,6 +6435,10 @@ spec:
                 type: object
               tracing:
                 properties:
+                  customTags:
+                    additionalProperties:
+                      x-kubernetes-preserve-unknown-fields: true
+                    type: object
                   datadog:
                     properties:
                       address:
