Adds in customTags to the tracing config so you can specifiy custom tags to be included in all spans

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -6430,6 +6430,10 @@ spec:
                 type: object
               tracing:
                 properties:
+                  customTags:
+                    additionalProperties:
+                      x-kubernetes-preserve-unknown-fields: true
+                    type: object
                   datadog:
                     properties:
                       address:
