--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_istios.yaml
@@ -6428,6 +6428,10 @@ spec:
                   type: object
                 tracing:
                   properties:
+                    customTags:
+                      additionalProperties:
+                        x-kubernetes-preserve-unknown-fields: true
+                      type: object
                     datadog:
                       properties:
                         address:
