Fix missing RBAC permissions for Istio 1.8
When trying to create a new Isito 1.8 based istio operator using these
helm charts we are getting the following failure:

clusterroles.rbac.authorization.k8s.io "istio-reader-cp-v18x-istio-system" is forbidden: user "system:serviceaccount:istio-system:istio-operator-v18x" (groups=["system:serviceaccounts" "system:serviceaccounts:istio-system" "system:authenticated"]) is attempting to grant RBAC permissions not currently held:
{APIGroups:["authentication.istio.io"], Resources:["*"], Verbs:["get" "watch" "list"]}
{APIGroups:["config.istio.io"], Resources:["*"], Verbs:["get" "watch" "list"]}

This patch ensures that we are giving the istio-operator to provision
1.8 based Istio controlplanes too.

--- a/deploy/charts/istio-operator/templates/operator-rbac.yaml
+++ b/deploy/charts/istio-operator/templates/operator-rbac.yaml
@@ -283,7 +283,7 @@ rules:
   - update
   - patch
 - apiGroups:
-  {{- if semverCompare "< 1.8.0" .Values.istioVersion }}
+  {{- if semverCompare "<= 1.8.0" .Values.istioVersion }}
   - authentication.istio.io
   - config.istio.io
   {{- end }}
