--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,12 @@ bin
 !vendor/**/zz_generated.*
 
 # editor and IDE paraphernalia
-.idea
 *.swp
 *.swo
 *~
+
+.idea/*
+!/.idea/go.imports.xml
+/.licensei.cache
+bin/*
+cover.out
