--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,58 @@
-# Placeholder config so that the CI does not fail (cannot easily disable CI for a specific branch)
 version: 2.1
 
 jobs:
-    build:
-        docker:
-          - image: circleci/golang:1.15
-        steps:
-          - run: circleci-agent step halt
+  build:
+    docker:
+    - image: circleci/golang:1.15
+
+    working_directory: /go/src/github.com/banzaicloud/istio-operator
+    steps:
+    - checkout
+
+    - restore_cache:
+        name: Restore build dependencies
+        keys:
+        - build-deps-v1-{{ .Branch }}-{{ checksum "scripts/download-deps.sh" }}
+
+    - restore_cache:
+        name: Restore license cache
+        keys:
+        - licensei-v1-{{ .Branch }}-{{ checksum "go.sum" }}
+        - licensei-v1-{{ .Branch }}
+        - licensei-v1-master
+        - licensei-v1
+
+    - run:
+        name: Download license information for dependencies
+        command: make license-cache
+
+    - save_cache:
+        name: Save license cache
+        key: licensei-v1-{{ .Branch }}-{{ checksum "go.sum" }}
+        paths:
+        - .licensei.cache
+
+    - run:
+        name: Check dependency licenses
+        command: make license-check
+
+    - run:
+        name: Run unit tests, linter, etc.
+        command: make check
+
+    - run:
+        name: Build
+        command:
+          make build
+
+    - save_cache:
+        name: Save build dependencies
+        key: build-deps-v1-{{ .Branch }}-{{ checksum "scripts/download-deps.sh" }}
+        paths:
+        - bin/
+
+workflows:
+  version: 2
+  ci:
+    jobs:
+    - build
