Add short names for IstioControlPlane CRD

--- a/config/crd/bases/servicemesh.cisco.com_istiocontrolplanes.yaml
+++ b/config/crd/bases/servicemesh.cisco.com_istiocontrolplanes.yaml
@@ -13,6 +13,9 @@ spec:
     kind: IstioControlPlane
     listKind: IstioControlPlaneList
     plural: istiocontrolplanes
+    shortNames:
+    - icp
+    - istiocp
     singular: istiocontrolplane
   scope: Namespaced
   versions:
