Pull istio images from gcr

--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -27,5 +27,5 @@ spec:
         brokenPodLabelKey: "cni.istio.io/uninitialized"
         brokenPodLabelValue: "true"
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.3"
+    image: "gcr.io/istio-release/proxyv2:1.9.3"
   jwtPolicy: "first-party-jwt"
