--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -28,7 +28,7 @@ spec:
       enabled: false
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.9.3"
+    image: "gcr.io/istio-release/pilot:1.9.3"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
@@ -104,7 +104,7 @@ spec:
   telemetry:
     enabled: false
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.3"
+    image: "gcr.io/istio-release/proxyv2:1.9.3"
     accessLogFile: "/dev/stdout"
     accessLogFormat: ""
     accessLogEncoding: "TEXT"
@@ -118,7 +118,7 @@ spec:
         cpu: 2000m
         memory: 1024Mi
   proxyInit:
-    image: "docker.io/istio/proxyv2:1.9.3"
+    image: "gcr.io/istio-release/proxyv2:1.9.3"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
