--- a/config/samples/istio_v1beta1_istio_meshexpansion.yaml
+++ b/config/samples/istio_v1beta1_istio_meshexpansion.yaml
@@ -11,5 +11,5 @@ spec:
     mtlsMode: STRICT
   meshExpansion: true
   proxy:
-    image: "docker.io/istio/proxyv2:1.9.3"
+    image: "gcr.io/istio-release/proxyv2:1.9.3"
   jwtPolicy: "first-party-jwt"
