add generated crd and change sample

--- a/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
+++ b/config/samples/servicemesh_v1alpha1_istiocontrolplane.yaml
@@ -3,5 +3,5 @@ kind: IstioControlPlane
 metadata:
   name: istiocontrolplane-sample
 spec:
-  # Add fields here
-  foo: bar
+  config:
+    accessLogEncoding: TEXT
