--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -13,6 +13,7 @@ spec:
     plural: istiocontrolplanes
     shortNames:
     - icp
+    - istiocp
     singular: istiocontrolplane
   scope: Namespaced
   versions:
