Rename IstioControlPlane CRD field to meshConfig instead of config

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -32,7 +32,7 @@ spec:
         properties:
           spec:
             properties:
-              config:
+              meshConfig:
                 properties:
                   accessLogEncoding:
                     description: Encoding for the proxy access log (`TEXT` or `JSON`).
