Add separate go module for the API

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,6 +51,8 @@ linters-settings:
   gocritic:
     disabled-checks:
       - ifElseChain
+  gomoddirectives:
+    replace-local: true
 
 issues:
   # mainly because of the operator, but we are using helm chart names
