Move e2e-test stuff out of the main makefile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -16,6 +16,7 @@ RUN go mod download
 COPY pkg/    pkg/
 COPY cmd/    cmd/
 COPY vendor/ vendor/
+COPY test/e2e/e2e-test.mk /go/src/${PACKAGE}/test/e2e/
 COPY Makefile go.* /go/src/${PACKAGE}/
 
 # Build
