Add version field to ICP CRD

--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -1468,6 +1468,11 @@ spec:
                     nullable: true
                     type: boolean
                 type: object
+              version:
+                description: Contains the intended version for the Istio control plane.
+                format: string
+                pattern: ^1.
+                type: string
             type: object
           status:
             type: object
