--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -134,6 +134,11 @@ jobs:
       - run:
           name: Run E2E test
           command: make e2e-test E2E_TEST_TAG=<<parameters.tag>>
+      - run:
+          name: Compress E2E test dump
+          command: tar czf e2e-test-dump.tar.gz logs
+      - store_artifacts:
+          path: e2e-test-dump.tar.gz
 
 workflows:
   version: 2
