--- a/deploy/charts/istiod-remote/kustomization.yaml
+++ b/deploy/charts/istiod-remote/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - files/gen-istiod-remote.yaml
+  - resources/gen-istiod-remote.yaml
