use global control plane for federated multi so it can work with upstream pilot as well

--- a/docs/federation/gateway/samples/istio-multicluster-cr.yaml
+++ b/docs/federation/gateway/samples/istio-multicluster-cr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: istio-gw-multi
 spec:
   version: "1.9.5"
-  global: false
+  global: true
   meshPolicy:
     mtlsMode: STRICT
   meshExpansion: true
