--- a/config/crd/bases/istio-operator-crds.gen.yaml
+++ b/config/crd/bases/istio-operator-crds.gen.yaml
@@ -1499,3 +1499,85 @@ spec:
       status: {}
 
 ---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    "helm.sh/resource-policy": keep
+  name: meshgateways.servicemesh.cisco.com
+spec:
+  group: servicemesh.cisco.com
+  names:
+    kind: MeshGateway
+    listKind: MeshGatewayList
+    plural: meshgateways
+    shortNames:
+    - mgw
+    - meshgw
+    singular: meshgateway
+  scope: Namespaced
+  versions:
+  - additionalPrinterColumns:
+    - description: 'CreationTimestamp is a timestamp representing the server time
+        when this object was created. It is not guaranteed to be set in happens-before
+        order across separate operations. Clients may not set this value. It is represented
+        in RFC3339 form and is in UTC. Populated by the system. Read-only. Null for
+        lists. More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#metadata'
+      jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        properties:
+          spec:
+            description: MeshGateway defines an Istio ingress or egress gateway.
+            properties:
+              Ports:
+                description: MeshGatewayConfiguration `json:",inline"`.
+                items:
+                  properties:
+                    name:
+                      description: The name of this port within the service.
+                      format: string
+                      type: string
+                    nodePort:
+                      description: The port on each node on which this service is
+                        exposed when type=NodePort or LoadBalancer.
+                      format: int32
+                      type: integer
+                    port:
+                      description: The port that will be exposed by this service.
+                      format: int32
+                      type: integer
+                    protocol:
+                      description: The IP protocol for this port.
+                      format: string
+                      type: string
+                    targetPort:
+                      anyOf:
+                      - type: integer
+                      - type: string
+                      description: Number or name of the port to access on the pods
+                        targeted by the service.
+                      x-kubernetes-int-or-string: true
+                  type: object
+                minItems: 0
+                type: array
+              version:
+                description: Contains the intended version for the Mesh Gateway.
+                format: string
+                pattern: ^1.
+                type: string
+            required:
+            - version
+            type: object
+          status:
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+
+---
