include ExcludeInboundPorts and ExcludeOutboundPorts parameters

--- a/config/base/crds/istio.banzaicloud.io_istios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_istios.yaml
@@ -542,6 +542,10 @@ spec:
                 type: object
               excludeIPRanges:
                 type: string
+              excludeOutboundPorts:
+                type: string
+              excludeInboundPorts:
+                type: string
               galley:
                 properties:
                   additionalContainerArgs:
