--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -12,6 +12,8 @@ spec:
   autoMtls: true
   includeIPRanges: "*"
   excludeIPRanges: ""
+  excludeOutboundPorts: ""
+  excludeInboundPorts: ""
   controlPlaneAuthPolicy: "MUTUAL_TLS"
   mountMtlsCerts: false
   # priorityClassName: system-cluster-critical
