--- a/config/samples/istio_v1beta1_remoteistio.yaml
+++ b/config/samples/istio_v1beta1_remoteistio.yaml
@@ -9,6 +9,8 @@ spec:
   - "default"
   includeIPRanges: "*"
   excludeIPRanges: ""
+  excludeOutboundPorts: ""
+  excludeInboundPorts: ""
   enabledServices:
   - name: "istio-pilot"
     labelSelector: "istio=pilot"
