--- a/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/deploy/charts/istio-operator/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -550,6 +550,10 @@ spec:
                   type: array
                 excludeIPRanges:
                   type: string
+                excludeOutboundPorts:
+                  type: string
+                excludeInboundPorts:
+                  type: string
                 includeIPRanges:
                   type: string
                 istioControlPlane:
