--- a/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
+++ b/config/base/crds/istio.banzaicloud.io_remoteistios.yaml
@@ -552,6 +552,10 @@ spec:
                 type: array
               excludeIPRanges:
                 type: string
+              excludeOutboundPorts:
+                type: string
+              excludeInboundPorts:
+                type: string
               includeIPRanges:
                 type: string
               istioControlPlane:
