--- a/config/samples/istio_v1beta1_meshgateway.yaml
+++ b/config/samples/istio_v1beta1_meshgateway.yaml
@@ -3,7 +3,7 @@ kind: MeshGateway
 metadata:
   labels:
     controller-tools.k8s.io: "1.0"
-  name: meshgateway-sample-v19x
+  name: meshgateway-sample-v110x
 spec:
   type: ingress
   replicaCount: 1
